# interview

./: .gitignore  .scalafmt.conf  CH_OTP_Test_Task.pdf.gpg  IOHK - Scala Developer Test.pdf.gpg  LICENSE  README.md  build.sbt  interview.cabal  launch-script  stack.yaml
app/: Main.hs
src/: KeepAlive.hs  Nodes.hs  Runner.hs
src/main/scala/interview/: Broker.scala  Environment.scala  Main.scala  User.scala
src/test/scala/interview/: BrokerSpec.scala  ExhaustiveMatchSpec.scala  MainSpec.scala  UnitSpec.scala  UserSpec.scala
test/: RunnerSpec.hs  Spec.hs
