name:                interview
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/michalrus/interview#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Rus
maintainer:          m@michalrus.com
copyright:           2016 Michal Rus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Runner
  other-modules:       Nodes
  build-depends:       base >= 4.7 && < 5
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , concurrent-extra
                     , network-transport
                     , network-transport-tcp
                     , binary
                     , binary-orphans
                     , time
                     , random
  default-language:    Haskell2010

executable interview-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interview
                     , optparse-applicative
  default-language:    Haskell2010

test-suite interview-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interview
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , QuickCheck
                     , HUnit
                     , array
                     , time
                     , random
                     , distributed-process
                     , network-transport-inmemory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michalrus/interview
